Fix image overflow in new publisher preview

--- a/socialhome/frontend/src/styles/content.scss
+++ b/socialhome/frontend/src/styles/content.scss
@@ -11,8 +11,10 @@
   }
 }
 
-.markdownx-preview img {
-  max-width: 100%;
+.markdownx-preview, .editor-preview {
+    img {
+        max-width: 100%;
+    }
 }
 
 a.opengraph-card {
